# upbit-rs

./: Cargo.toml  README.md  conf.ini
src/: api.rs  api_quotation.rs  constant.rs  lib.rs  request.rs  response.rs
src/api/: accounts.rs  order.rs  order_cancel.rs  order_chance.rs  order_state.rs  order_state_list.rs  request.rs
src/api_deposit/: coin_address_generation.rs  coin_address_info.rs  coin_address_info_list.rs  coin_addresses_inquiry.rs  deposit_info.rs  deposit_info_list.rs  deposit_krw.rs  mod.rs
src/api_exchange/: accounts.rs  mod.rs  order.rs  order_cancel.rs  order_chance.rs  order_state.rs  order_state_list.rs  order_states.rs  order_states_list.rs  order_status.rs  order_status_list.rs
src/api_quotation/: candle_day.rs  candle_minute.rs  candle_month.rs  candle_week.rs  market_state.rs  mod.rs  order_book.rs  ticker_snapshot.rs  trade_recent.rs
src/api_withdraw/: inquiry_withdraw.rs  inquiry_withdraw_list.rs  mod.rs  withdraw_address.rs  withdraw_chance.rs  withdraw_coin.rs  withdraw_info.rs  withdraw_info_list.rs  withdraw_krw.rs  withdraw_list.rs
src/response/: accounts_info.rs  mod.rs  order_chance.rs  order_info.rs  order_state.rs  order_status.rs  response_error.rs  transaction_info.rs  withdraw_info.rs  withdrawal_deposit_info.rs
src/response_source/: accounts_info.rs  mod.rs  order_chance.rs  order_info.rs  order_state.rs  order_status.rs  response_error.rs
tests/: integration_test.rs
