[package]
name = "upbit"
version = "1.4.9"
edition = "2021"
authors = ["sy september <loldruger@gmail.com>"]
description = "rust_upbit_api with upbit api version v1.3.4"
repository = "https://github.com/loldruger/rust-upbit-api.git"
documentation = "https://docs.rs/upbit/latest/upbit/index.html"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.18", features = ["json"] }
hmac = "0.12.1"
jsonwebtokens = "1.2.0"
sha2 = "0.10.7"
uuid = { version = "1.4.0", features = ["v4", "serde"] }
serde = "1.0.166"
serde_with = { version = "3.0.0", features = ["json"] }
serde_json = "1.0.100"
envmnt = "0.10.4"
chrono = "0.4.26"
