[package]
name = "upbit"
version = "1.8.2"
edition = "2021"
authors = ["sy september <loldruger@gmail.com>"]
description = "rust_upbit_api for upbit api version v1.4.8"
repository = "https://github.com/loldruger/rust-upbit-api.git"
documentation = "https://docs.rs/upbit/latest/upbit/index.html"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12.5", features = ["json"] }
hmac = "0.12.1"
jsonwebtokens = "1.2.0"
sha2 = "0.10.8"
uuid = { version = "1.10.0", features = ["v4", "serde"] }
serde = "1.0.204"
serde_with = { version = "3.9.0", features = ["json"] }
serde_json = "1.0.122"
envmnt = "0.10.4"
chrono = { version = "0.4.38", features = ["serde"] }
tokio = { version = "1.39.2", features = ["full"] }
sqlx = { version = "0.8.0", optional = true }


[lib]
doctest = false

[features]
default = []
sqlx-type = ["sqlx"]
