[package]
name = "upbit"
version = "1.13.2"
edition = "2021"
authors = ["sy september <loldruger@gmail.com>"]
description = "rust_upbit_api for upbit api version v1.5.0"
repository = "https://github.com/loldruger/rust-upbit-api.git"
documentation = "https://docs.rs/upbit/latest/upbit/index.html"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12.7", features = ["json"] }
hmac = "0.12.1"
jsonwebtokens = "1.2.0"
sha2 = "0.10.8"
uuid = { version = "1.10.0", features = ["v4", "serde"] }
serde = "1.0.209"
serde_with = { version = "3.9.0", features = ["json"] }
serde_json = "1.0.127"
envmnt = "0.10.4"

chrono = { version = "0.4.38", features = ["serde"], optional = true }
sqlx = { version = "0.8.1", optional = true }

[dev-dependencies]
tokio = { version = "1.39.3", features = ["full"] }

[lib]
doctest = false

[features]
default = []
sqlx-type = ["sqlx"]
chrono-type = ["chrono"]